plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.6'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
}

group = 'caisse.manager'
version = '0.0.1-SNAPSHOT'
description = 'ce projet consiste à implementer un logiciel de la gestion de la caisse pour les snacks'

java {
	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Dépendances Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Driver de la base de données (MariaDB)
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	runtimeOnly 'com.h2database:h2'

	// Outils de développement
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Dépendances de Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.junit.platform:junit-platform-suite'
	
	// Base de données H2 pour les tests
	testImplementation 'com.h2database:h2'
	testImplementation 'io.cucumber:cucumber-java:7.20.1'
	testImplementation 'io.cucumber:cucumber-spring:7.20.1'
	testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.20.1'

	// 1. Le module de sécurité officiel de Spring
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// 2. Librairies pour générer/lire les Tokens JWT (JJWT)
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy tasks.named('jacocoTestReport')
	jacoco {
		// Évite l'instrumentation des classes JDK
		excludes = ['java.*', 'javax.*', 'jdk.*', 'sun.*', 'com.sun.*']
	}
}

tasks.withType(JavaCompile).configureEach {
	options.release = 25
}

jacoco {
	toolVersion = '0.8.13'
}

tasks.named('jacocoTestReport') {
	dependsOn tasks.named('test')
	reports {
		xml.required = true
		csv.required = false
		html.required = true
	}
}
